--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,128 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/almostBlack"
     android:orientation="vertical"
-    tools:ignore="HardcodedText">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="409dp"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+    android:background="#222">
+
+    <!-- Hiển thị biểu thức và kết quả -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:padding="20dp"
-        tools:layout_editor_absoluteX="1dp">
+        android:orientation="vertical">
+        <Spinner
+            android:id="@+id/fromCurrency"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:minHeight="48dp"
+            android:entries="@array/currency_options"
+            android:textSize="16sp"
+            android:padding="8dp"
+            android:background="@android:drawable/btn_dropdown"
+            android:textColor="#FFFFFF"/>
 
-        <TextView
-            android:id="@+id/workingsTV"
+        <EditText
+            android:id="@+id/inputAmount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:lines="2"
-            android:maxLines="2"
-            android:text=""
-            android:textAlignment="textEnd"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            app:layout_constraintBottom_toTopOf="@+id/resultsTV"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:hint="Nhập số tiền"
+            android:inputType="numberDecimal"
+            android:textSize="18sp"
+            android:padding="12dp"
+            android:background="@android:drawable/edit_text"/>
+        <Spinner
+            android:id="@+id/toCurrency"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:minHeight="48dp"
+            android:entries="@array/currency_options"
+            android:textSize="16sp"
+            android:padding="8dp"
+            android:background="@android:drawable/btn_dropdown"
+            android:textColor="#FFFFFF"/>
 
-        <TextView
-            android:id="@+id/resultsTV"
+        <Button
+            android:id="@+id/convertButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:lines="1"
-            android:maxLines="1"
-            android:text=""
-            android:textAlignment="textEnd"
-            android:textColor="@color/white"
+            android:text="Convert"
+            android:textSize="20sp"
+            android:padding="10dp"
+            android:background="#0277BD"
+            android:textColor="#FFFFFF"/>
+
+        <TextView
+            android:id="@+id/resultTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0"
             android:textSize="40sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <LinearLayout
-        style="@style/buttonRow">
-        <Button
-            style="@style/buttonNumber"
-            android:text="AC"
-            android:textColor="@color/blue"
-            android:onClick="allClearAction"/>
-        <Button
-            style="@style/buttonNumber"
-            android:text="⌫"
-            android:textColor="@color/blue"
-            android:onClick="backSpaceAction"/>
-        <Button
-            style="@style/buttonNumber"
-            android:text=""/>
-        <Button
-            style="@style/buttonOperator"
-            android:text="/"/>
-    </LinearLayout>
-    <LinearLayout
-        style="@style/buttonRow">
-        <Button
-            style="@style/buttonNumber"
-            android:text="7"/>
-        <Button
-            style="@style/buttonNumber"
-            android:text="8"/>
-        <Button
-            style="@style/buttonNumber"
-            android:text="9"/>
-        <Button
-            style="@style/buttonOperator"
-            android:text="x"/>
-    </LinearLayout>
-    <LinearLayout
-        style="@style/buttonRow">
-        <Button
-            style="@style/buttonNumber"
-            android:text="4"/>
-        <Button
-            style="@style/buttonNumber"
-            android:text="5"/>
-        <Button
-            style="@style/buttonNumber"
-            android:text="6"/>
-        <Button
-            style="@style/buttonOperator"
-            android:text="-"/>
-    </LinearLayout>
-    <LinearLayout
-        style="@style/buttonRow">
-        <Button
-            style="@style/buttonNumber"
-            android:text="1"/>
-        <Button
-            style="@style/buttonNumber"
-            android:text="2"/>
-        <Button
-            style="@style/buttonNumber"
-            android:text="3"/>
-        <Button
-            style="@style/buttonOperator"
-            android:text="+"/>
-    </LinearLayout>
-    <LinearLayout
-        style="@style/buttonRow">
-        <Button
-            style="@style/buttonNumber"
-            android:text="."/>
-        <Button
-            style="@style/buttonNumber"
-            android:text="0"/>
-        <Button
-            style="@style/buttonNumber"
-            android:layout_weight="2"
-            android:background="@color/blue"
-            android:textSize="40sp"
-            android:onClick="equalsAction"
-            android:text="="/>
+            android:textColor="#FFFFFF"
+            android:gravity="end"
+            android:textStyle="bold"/>
     </LinearLayout>
 </LinearLayout>
